Fixed Mobile bank app layout bugs

--- a/UI/components/ChallengesAndSolutions/styles/mobile-bank-application.scss
+++ b/UI/components/ChallengesAndSolutions/styles/mobile-bank-application.scss
@@ -35,6 +35,10 @@
       }
     }
 
+    p {
+      margin-bottom: 0;
+    }
+
     p:first-child {
       display: inline-block;
       margin-bottom: 24px;
@@ -54,6 +58,8 @@
       font-size: 16px;
       font-weight: 400;
     }
+
+    
   }
 
   &.secondSectionView {
