--- a/UI/sections/WireframesSection/styles/mobile-bank-application.scss
+++ b/UI/sections/WireframesSection/styles/mobile-bank-application.scss
@@ -1,5 +1,6 @@
 .mobile-bank-application {
   padding: 104px 0 84px;
+  background-color: $gray50;
 
   [data-description] {
     max-width: 540px;
